Change the language to Farsi

--- a/src/index.css
+++ b/src/index.css
@@ -2,16 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  font-family: "Dirooz";
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  direction: rtl;
+  margin: 0;
+}
+
+@font-face {
+  font-family: "Dirooz"; /*Can be any text*/
+  src: local("Dirooz"), url("./fonts/Dirooz.woff") format("woff");
+}
+
+.Toastify__toast {
+  margin-top: 20px;
+  width: 90%;
 }
